examples/default/rendered/envs/mykso-dev/argocd/networkpolicy-argocd-server-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    a8r.io/repository: git@github.com:mykso/myks.git
  name: argocd-server-network-policy
  namespace: argocd
spec:
  ingress:
    - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  policyTypes:
    - Ingress
